New ProfilController, UserUtilities, Password Validator, changes in User, UserRepository, UserService, UserServuceImpl

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,15 +1,28 @@
-main.mainPage=Strona G³ówna
+#OGÓLNE
+word.tak=TAK
+word.nie=NIE
+word.admin=Administrator
+word.user=U¿ytkownik
+#MENU
+menu.mainPage=Strona G³ówna
+menu.profil=Profil
 menu.login=Zaloguj
-main.register=Rejestracja
+menu.register=Rejestracja
 menu.logout=Wyloguj
-
+#BUTTONS
+button.zmianaHasla=Zmieñ Has³o
+button.edycjaProfilu=Edycja Profilu
+button.save=Zapisz
 button.register=Rejestracja
 button.cancel=Anuluj
-
+#REJESTRACJA
 register.name=Imiê
 register.lastName=Nazwisko
 register.email=Adres email
 register.password=Has³o
+user.register.success=Zosta³eœ zarejestrowany. Zaloguj siê.
+#LOGOWANIE
+logowanie.pageName=Logowanie
 
 #ERRORS
 error.userName.empty=Pole Imie nie mo¿e byæ puste
@@ -19,7 +32,20 @@ error.userPassword.empty=Has³o nie mo¿e byæ puste
 error.userEmailIsNotMatch=Email jest nieprawid³owy
 error.userPasswordIsNotMatch=Has³o musi zawiecaæ min 5 znaków cyfre i ma³¹ literê
 error.userEmailExist=Adres email ju¿ jest zarejestrowany.
+error.logowanie=Nieprawid³owa nazwa u¿ytkownika lub has³o
 
 error.errorPage=B³¹d
 
 error.defaultErrorMessage=Ojojjjj! Nie Bangla.
+error.oldPasswordNotMatch=Aktualne has³o jest nieprawid³owe
+#PROFIL U¯YTKOWNIKA
+profil.userDane=Twoje Dane
+profil.czyAktywny=Akywny
+profil.rola=Rola
+#ZMIANA HAS£A
+passwordChange.oldPassword=Stare Has³o
+passwordChange.newPassword=Nowe Has³o
+passwordChange.success=Has³o zosta³o zmienione
+#EDYCJA PROFILU
+profilEdit.pageName=Edycja profilu
+profilEdit.success=Dane zmienione pomyœlnie. Za 3 sekundy zostaniesz wylogowany. Zaloguj siê ponownie.
